--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,7 +3,7 @@
 on:
   workflow_dispatch:
   push:
-    branches: [main, master]
+    branches: [Mitch]
   pull_request:
     branches: [main, master]
 
