--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,7 +42,7 @@ jobs:
             poetry-${{ hashFiles('**/poetry.lock') }}
             
       - name: Install Dependencies
-        run: poetry install
+        run: poetry install --no-root
         if: steps.cache.outputs.cache-hit != 'true'
  
 
